--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,11 +10,9 @@
     <meta property="og:title" content="Trip Packer — Pack smarter, stress less" />
     <meta property="og:description" content="Plan trips and organize packing across luggage with clear statuses." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
   </head>
 
   <body>
