--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trip Packer — Pack smarter, stress less</title>
-    <meta name="description" content="Trip Packer helps you plan trips, organize luggage, and track packed, unpacked, and to-buy items." />
+    <meta name="description" content="Trip Packer helps you plan trips, organize bag, and track packed, unpacked, and to-buy items." />
     <meta name="author" content="Trip Packer" />
 
     <meta property="og:title" content="Trip Packer — Pack smarter, stress less" />
-    <meta property="og:description" content="Plan trips and organize packing across luggage with clear statuses." />
+    <meta property="og:description" content="Plan trips and organize packing across bag with clear statuses." />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
